# PyPong

./: .gitignore  LICENSE  README.md  pyproject.toml
game/: Pong.py  pong.kv
